grammar/corpus/examples.txt
================================================================================
Atomic formulas
================================================================================
Examples:
A
Z
T
F
--------------------------------------------------------------------------------

(file
  (examples
    (formula
      (var))
    (formula
      (var))
    (formula
      (const))
    (formula
      (const))))

================================================================================
Unary operators
================================================================================
Example
¬ A
--------------------------------------------------------------------------------

(file
  (examples
    (formula
      (neg
        (var)))))

================================================================================
Binary operators
================================================================================
Examples:
A ∧ B
A ∨ B
A → B
--------------------------------------------------------------------------------

(file
  (examples
    (formula
      (and
        (var)
        (var)))
    (formula
      (or
        (var)
        (var)))
    (formula
      (imp
        (var)
        (var)))))
